4B/cs444/tests/pass/pass_int.joos
/* pass: int */
public class A {
  public A() {}
  protected int x;
}

