4B/cs444/tests/fail/fail_multipletypesperfile.joos
/* fail: multiple types per file */
class A {
  protected int x;
}

class B {
  protected int y;
}

